--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,8 @@ tilelang_file_glob(GLOB TILE_LANG_SRCS
     src/layout/*.cc
     src/transform/*.cc
     src/op/*.cc
-    src/target/utils.cc    
+    src/target/utils.cc
+    src/runtime/*.cc
 )
 
 if(USE_CUDA)
