--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,9 @@ ruff==0.6.5
 codespell==2.3.0
 clang-format==15.0.7
 
+# build requirements
+cmake>=3.26
+# runtime requirements
 cffi
 cpplint
 Cython
